--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="history.css">
     <title>History and Timeline</title>
 </head>
 <body>
 
     <main>
-        <nav></nav>
+        <nav>mini navbar</nav>
         <section>
             <header class="decade">XXXX</header>
             <div class="tl-card">
@@ -16,7 +19,9 @@
                     <div class="tl-title">Header Title</div>
                     <div class="tl-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate odit neque harum deserunt soluta amet ut. Odit hic assumenda mollitia perferendis blanditiis perspiciatis ipsam eligendi, ex minus, nobis fuga numquam.</div>
                 </div>
-                <div class="tl-image"></div>
+                <div class="tl-img">
+                    <img src="https://placehold.co/400x650" alt="">
+                </div>
             </div>
         </section>
     </main>
