--- a/index.html
+++ b/index.html
@@ -16,11 +16,44 @@
             <header class="decade">XXXX</header>
             <div class="tl-card">
                 <div class="tl-content">
-                    <div class="tl-title">Header Title</div>
-                    <div class="tl-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate odit neque harum deserunt soluta amet ut. Odit hic assumenda mollitia perferendis blanditiis perspiciatis ipsam eligendi, ex minus, nobis fuga numquam.</div>
+                    <div class="tl-text">
+                        <span class="tl-headline">
+                            <span class="tl-date">November 14, 1875:</span>
+                            <span class="tl-title">Church Cornerstone Laid</span>
+                        </span>
+                        <span>Members of the Congregation of the Mission (Vincentians) arrived in Chicago  from LaSalle, Ill. The cornerstone was laid for a church building at the northeast corner of Webster and Osgood (now Kenmore Ave.) (see 1898).  The founding pastor was the Rev. Thomas Smith, C.M., and the area around the church was referred to as his "farm."</span>
+                    </div>
+                    <div class="tl-img">
+                        <img src="https://placehold.co/100x50" alt="">
+                    </div>
                 </div>
-                <div class="tl-img">
-                    <img src="https://placehold.co/400x650" alt="">
+            </div>
+            <div class="tl-card">
+                <div class="tl-content">
+                    <div class="tl-text">
+                        <span class="tl-headline">
+                            <span class="tl-date">May 2, 1897:</span>
+                            <span class="tl-title">Church Dedication</span>
+                        </span>
+                        <span>A new church (the present St. Vincent's Church) was dedicated by the Most Rev. Patrick Feehan, first Archbishop of Chicago. Archbishop Feehan urged the Vincentians to open a new college on a site adjoining the recently erected church.</span>
+                    </div>
+                    <div class="tl-img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-content">
+                    <div class="tl-text">
+                        <span class="tl-headline">
+                            <span class="tl-date">June 30, 1898:</span>
+                            <span class="tl-title">St. Vincent's College Established</span>
+                        </span>
+                        <span>Classes opened in the original St. Vincent's Church, refurbished and renamed  the College Building at Webster and Osgood (now Kenmore Ave.) on  September 5. The College Building had classrooms on the first floor;  classrooms and offices on the second floor; and a third floor, added  during remodeling, that was named St. Vincent's College Hall.</span>
+                    </div>
+                    <div class="tl-img">
+                        <img src="https://placehold.co/400x500" alt="">
+                    </div>
                 </div>
             </div>
         </section>
