decades sticky top

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <nav>mini navbar</nav>
         <section>
             <header class="decade">XXXX</header>
+            <header class="decade">AAAA</header>
+            <header class="decade">BBBB</header>
+            <header class="decade">CCCC</header>
+            <header class="decade">XXXX</header>
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
