fixed chrome bug causing headers to be jittery when clicking item on the main nav

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <main id="dpu-timeline">
         <nav>
             <ul class="tl-nav">
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
-                <li class="tl-nav-item"><a href="">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section1">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section2">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section3">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section4">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section5">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section6">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section7">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section8">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section9">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section10">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section11">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section12">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section13">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section14">1800s</a></li>
             </ul>
         </nav>
-        <section>
-            <header class="decade">XXXX</header>
+        <section id="section1">
+            <header class="decade"><a href="#" >XXXX</a></header>
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
@@ -75,8 +75,8 @@
                 </div>
             </div>
         </section>
-        <section>
-            <header class="decade">XXXX</header>
+        <section id="section2">
+            <header class="decade"><a href="#" >XXXX</a></header>
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
@@ -120,8 +120,8 @@
                 </div>
             </div>
         </section>
-        <section>
-            <header class="decade">XXXX</header>
+        <section id="section3">
+            <header class="decade"><a href="#" >XXXX</a></header>
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
