--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
             </ul>
         </nav>
         <section id="section1">
-            <header class="decade"><a href="#" >XXXX</a></header>
+            <header class="decade">
+                <a href="#" >1800s
+                    <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>
+            </header>
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
@@ -76,7 +82,14 @@
             </div>
         </section>
         <section id="section2">
-            <header class="decade"><a href="#" >XXXX</a></header>
+            <header class="decade dropdown">
+                    <a role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      1900s
+                      <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>
+                    </a>
+            </header>            
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
@@ -121,7 +134,11 @@
             </div>
         </section>
         <section id="section3">
-            <header class="decade"><a href="#" >XXXX</a></header>
+            <header class="decade">
+                <a href="#" >1910s<svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg></a>
+            </header>
             <div class="tl-card">
                 <div class="tl-content">
                     <div class="tl-text">
