--- a/index.html
+++ b/index.html
@@ -89,6 +89,29 @@
                         <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                       </svg>
                     </a>
+                  
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <ul class="tl-nav">
+                            <li class=""><a href="#section1" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section2" class="dropdown-item">1900s</a></li>
+                            <li class=""><a href="#section3" class="dropdown-item">1910s</a></li>
+                            <li class=""><a href="#section4" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section5" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section6" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section7" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section8" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section9" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section10" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section11" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section12" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section13" class="dropdown-item">1800s</a></li>
+                            <li class=""><a href="#section14" class="dropdown-item">1800s</a></li>
+                        </ul>                        
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+
             </header>            
             <div class="tl-card">
                 <div class="tl-content">
