added image captions and section dropdowns

--- a/index.html
+++ b/index.html
@@ -15,28 +15,49 @@
         <nav>
             <ul class="tl-nav">
                 <li class="tl-nav-item"><a href="#section1">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section2">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section3">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section4">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section5">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section6">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section7">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section8">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section9">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section10">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section11">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section12">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section13">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section14">1800s</a></li>
+                <li class="tl-nav-item"><a href="#section2">1900s</a></li>
+                <li class="tl-nav-item"><a href="#section3">1910s</a></li>
+                <li class="tl-nav-item"><a href="#section4">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section5">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section6">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section7">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section8">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section9">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section10">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section11">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section12">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section13">0000s</a></li>
+                <li class="tl-nav-item"><a href="#section14">0000s</a></li>
             </ul>
         </nav>
         <section id="section1">
             <header class="decade">
-                <a href="#" >1800s
+                <a role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    1800s
                     <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </a>
+
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <ul class="tl-nav">
+                        <li class="tl-nav-item"><a href="#section1">1800s</a></li>
+                        <li class="tl-nav-item"><a href="#section2">1900s</a></li>
+                        <li class="tl-nav-item"><a href="#section3">1910s</a></li>
+                        <li class="tl-nav-item"><a href="#section4">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section5">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section6">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section7">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section8">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section9">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section10">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section11">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section12">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section13">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section14">0000s</a></li>
+                    </ul>
+                </div>
+
             </header>
             <div class="tl-card">
                 <div class="tl-content">
@@ -48,7 +69,10 @@
                         <span>Members of the Congregation of the Mission (Vincentians) arrived in Chicago  from LaSalle, Ill. The cornerstone was laid for a church building at the northeast corner of Webster and Osgood (now Kenmore Ave.) (see 1898).  The founding pastor was the Rev. Thomas Smith, C.M., and the area around the church was referred to as his "farm."</span>
                     </div>
                     <div class="tl-img">
-                        <img src="https://placehold.co/100x50" alt="">
+                        <figure>
+                            <img src="https://placehold.co/100x50" alt="">
+                            <figcaption>caption for image, not the same as alt text</figcaption>
+                          </figure> 
                     </div>
                 </div>
             </div>
@@ -76,7 +100,10 @@
                         <span>Classes opened in the original St. Vincent's Church, refurbished and renamed  the College Building at Webster and Osgood (now Kenmore Ave.) on  September 5. The College Building had classrooms on the first floor;  classrooms and offices on the second floor; and a third floor, added  during remodeling, that was named St. Vincent's College Hall.</span>
                     </div>
                     <div class="tl-img">
-                        <img src="https://placehold.co/400x500" alt="">
+                        <figure>
+                            <img src="https://placehold.co/400x600" alt="">
+                            <figcaption>caption for image</figcaption>
+                          </figure> 
                     </div>
                 </div>
             </div>
@@ -92,24 +119,21 @@
                   
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                         <ul class="tl-nav">
-                            <li class=""><a href="#section1" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section2" class="dropdown-item">1900s</a></li>
-                            <li class=""><a href="#section3" class="dropdown-item">1910s</a></li>
-                            <li class=""><a href="#section4" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section5" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section6" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section7" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section8" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section9" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section10" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section11" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section12" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section13" class="dropdown-item">1800s</a></li>
-                            <li class=""><a href="#section14" class="dropdown-item">1800s</a></li>
-                        </ul>                        
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                            <li class="tl-nav-item"><a href="#section1">1800s</a></li>
+                            <li class="tl-nav-item"><a href="#section2">1900s</a></li>
+                            <li class="tl-nav-item"><a href="#section3">1910s</a></li>
+                            <li class="tl-nav-item"><a href="#section4">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section5">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section6">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section7">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section8">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section9">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section10">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section11">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section12">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section13">0000s</a></li>
+                            <li class="tl-nav-item"><a href="#section14">0000s</a></li>
+                        </ul>
                     </div>
 
             </header>            
@@ -123,7 +147,10 @@
                         <span>Members of the Congregation of the Mission (Vincentians) arrived in Chicago  from LaSalle, Ill. The cornerstone was laid for a church building at the northeast corner of Webster and Osgood (now Kenmore Ave.) (see 1898).  The founding pastor was the Rev. Thomas Smith, C.M., and the area around the church was referred to as his "farm."</span>
                     </div>
                     <div class="tl-img">
-                        <img src="https://placehold.co/100x50" alt="">
+                        <figure>
+                            <img src="https://placehold.co/100x50" alt="">
+                            <figcaption>caption for image</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
@@ -151,16 +178,42 @@
                         <span>Classes opened in the original St. Vincent's Church, refurbished and renamed  the College Building at Webster and Osgood (now Kenmore Ave.) on  September 5. The College Building had classrooms on the first floor;  classrooms and offices on the second floor; and a third floor, added  during remodeling, that was named St. Vincent's College Hall.</span>
                     </div>
                     <div class="tl-img">
-                        <img src="https://placehold.co/400x500" alt="">
+                                                <figure>
+                            <img src="https://placehold.co/400x600" alt="">
+                            <figcaption>caption for image</figcaption>
+                          </figure>
                     </div>
                 </div>
             </div>
         </section>
         <section id="section3">
             <header class="decade">
-                <a href="#" >1910s<svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <a role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    1910s
+                    <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg></a>
+                    </svg>
+                </a>
+                
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <ul class="tl-nav">
+                        <li class="tl-nav-item"><a href="#section1">1800s</a></li>
+                        <li class="tl-nav-item"><a href="#section2">1900s</a></li>
+                        <li class="tl-nav-item"><a href="#section3">1910s</a></li>
+                        <li class="tl-nav-item"><a href="#section4">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section5">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section6">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section7">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section8">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section9">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section10">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section11">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section12">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section13">0000s</a></li>
+                        <li class="tl-nav-item"><a href="#section14">0000s</a></li>
+                    </ul>
+                </div>
+
             </header>
             <div class="tl-card">
                 <div class="tl-content">
@@ -172,7 +225,10 @@
                         <span>Members of the Congregation of the Mission (Vincentians) arrived in Chicago  from LaSalle, Ill. The cornerstone was laid for a church building at the northeast corner of Webster and Osgood (now Kenmore Ave.) (see 1898).  The founding pastor was the Rev. Thomas Smith, C.M., and the area around the church was referred to as his "farm."</span>
                     </div>
                     <div class="tl-img">
-                        <img src="https://placehold.co/100x50" alt="">
+                        <figure>
+                            <img src="https://placehold.co/100x50" alt="">
+                            <figcaption>caption for image</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
@@ -200,7 +256,10 @@
                         <span>Classes opened in the original St. Vincent's Church, refurbished and renamed  the College Building at Webster and Osgood (now Kenmore Ave.) on  September 5. The College Building had classrooms on the first floor;  classrooms and offices on the second floor; and a third floor, added  during remodeling, that was named St. Vincent's College Hall.</span>
                     </div>
                     <div class="tl-img">
-                        <img src="https://placehold.co/400x500" alt="">
+                        <figure>
+                            <img src="https://placehold.co/400x600" alt="">
+                            <figcaption>caption for image</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
