keyboard tabbing added to section headers

--- a/index.html
+++ b/index.html
@@ -12,26 +12,10 @@
     <main id="dpu-timeline">
         <nav>
             <div class="nav"></div>
-            <!-- <ul class="tl-nav">
-                <li class="tl-nav-item"><a href="#section1">1800s</a></li>
-                <li class="tl-nav-item"><a href="#section2">1900s</a></li>
-                <li class="tl-nav-item"><a href="#section3">1910s</a></li>
-                <li class="tl-nav-item"><a href="#section4">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section5">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section6">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section7">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section8">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section9">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section10">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section11">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section12">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section13">0000s</a></li>
-                <li class="tl-nav-item"><a href="#section14">0000s</a></li>
-            </ul> -->
         </nav>
         <section id="section1">
             <header class="decade">
-                <a role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
                     1800s
                     <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -92,7 +76,7 @@
         </section>
         <section id="section2">
             <header class="decade dropdown">
-                    <a role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
                       1900s
                       <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -153,7 +137,7 @@
         </section>
         <section id="section3">
             <header class="decade">
-                <a role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
                     1910s
                     <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
