--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <span class="tl-date">May 2, 1897:</span>
                             <span class="tl-title">Church Dedication</span>
                         </span>
-                        <span>A new church (the present St. Vincent's Church) was dedicated by the Most Rev. Patrick Feehan, first Archbishop of Chicago. Archbishop Feehan urged the Vincentians to open a new college on a site adjoining the recently erected church.</span>
+                        <span>A new church dedicated</span>
                     </div>
                     <div class="tl-img">
                         <img src="" alt="">
