fixed chrome figcaption bug where parent ignores positioning

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                     </div>
                     <div class="tl-img">
                         <figure>
-                            <img src="https://placehold.co/100x50" alt="">
-                            <figcaption>caption for image, not the same as alt text</figcaption>
+                            <img src="https://placehold.co/675x1015" alt="">
+                            <figcaption>caption for image caption for image caption for image caption for imagecaption for imagecaption for image</figcaption>
                           </figure> 
                     </div>
                 </div>
@@ -68,8 +68,8 @@
                     <div class="tl-img">
                         <figure>
                             <img src="https://placehold.co/400x600" alt="">
-                            <figcaption>caption for image</figcaption>
-                          </figure> 
+                            <figcaption>caption for image caption for image caption for image caption for imagecaption for imagecaption for image</figcaption>
+                        </figure> 
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                     <div class="tl-img">
                         <figure>
                             <img src="https://placehold.co/100x50" alt="">
-                            <figcaption>caption for image</figcaption>
+                            <figcaption>caption for image caption for image caption for image caption for imagecaption for imagecaption for image</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
                     <div class="tl-img">
                         <figure>
                             <img src="https://placehold.co/100x50" alt="">
-                            <figcaption>caption for image</figcaption>
+                            <figcaption>caption for image caption for image caption for image caption for imagecaption for imagecaption for image</figcaption>
                         </figure>
                     </div>
                 </div>
