removed underlines unless clickable for decades and back to top links added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <nav>
             <div class="nav"></div>
         </nav>
+        <a id="arrowUp" href="#dpu-timeline">
+            <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </a>
         <section id="section1">
             <header class="decade">
                 <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
@@ -405,6 +410,68 @@
                             <img src="https://placehold.co/100x50" alt="">
                             <figcaption>caption for image</figcaption>
                         </figure>
+                    </div>
+                </div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-content">
+                    <div class="tl-text">
+                        <span class="tl-headline">
+                            <span class="tl-date">May 2, 1897:</span>
+                            <span class="tl-title">Church Dedication</span>
+                        </span>
+                        <span>A new church (the present St. Vincent's Church) was dedicated by the Most Rev. Patrick Feehan, first Archbishop of Chicago. Archbishop Feehan urged the Vincentians to open a new college on a site adjoining the recently erected church.</span>
+                    </div>
+                    <div class="tl-img">
+                        <img src="" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="tl-card">
+                <div class="tl-content">
+                    <div class="tl-text">
+                        <span class="tl-headline">
+                            <span class="tl-date">June 30, 1898:</span>
+                            <span class="tl-title">St. Vincent's College Established</span>
+                        </span>
+                        <span>Classes opened in the original St. Vincent's Church, refurbished and renamed  the College Building at Webster and Osgood (now Kenmore Ave.) on  September 5. The College Building had classrooms on the first floor;  classrooms and offices on the second floor; and a third floor, added  during remodeling, that was named St. Vincent's College Hall.</span>
+                    </div>
+                    <div class="tl-img">
+                        <figure>
+                            <img src="https://placehold.co/400x600" alt="">
+                            <figcaption>caption for image</figcaption>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section4">
+            <header class="decade">
+                <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="0">
+                    1940s
+                    <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </a>
+                
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink"><div class="nav"></div></div>
+
+            </header>
+            <div class="tl-card">
+                <div class="tl-content">
+                    <div class="tl-text">
+                        <span class="tl-headline">
+                            <span class="tl-date">graduation 1948:</span>
+                            <span class="tl-title">video sample</span>
+                        </span>
+                        <span>Members of the Congregation of the Mission (Vincentians) arrived in Chicago  from LaSalle, Ill. The cornerstone was laid for a church building at the northeast corner of Webster and Osgood (now Kenmore Ave.) (see 1898).  The founding pastor was the Rev. Thomas Smith, C.M., and the area around the church was referred to as his "farm."</span>
+                    </div>
+                    <div class="tl-img">
+
+                            <!-- <img src="https://placehold.co/100x50" alt=""> -->
+                            <iframe src="https://player.vimeo.com/video/47020093?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="1948 Graduation"></iframe>
+                            <script src="https://player.vimeo.com/api/player.js"></script>
+
                     </div>
                 </div>
             </div>
