--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="nav"></div>
         </nav>
-        <a id="arrowUp" href="#dpu-timeline">
+        <a id="arrowUp" href="#">
             <svg class="chevron" width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 1.5L5 5.5L9 1.5" stroke="#6E6E6E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
